--- a/src/main/webapp/css/vertical_table.css
+++ b/src/main/webapp/css/vertical_table.css
@@ -1,33 +1,27 @@
 table{
-    display:flex;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    overflow-x: auto;
-    overflow-y: hidden;
     width: 100%;
     border-collapse: collapse;
-    table-layout: auto;
 }
-thead {
+tbody {
+    width: 100%;
+}
+tbody th {
+    width: 25%;
     background-color: #00AB6F;
     color: white;
+    border: 1px solid white;
+}
+tbody td {
+    width: 75%;
+    padding-left: 10px;
+}
+tbody tr {
+    height: 45px;
 }
 table, td {
     border: 1px solid #B8B8B8;
 }
-th {
-    border: 1px solid white;
-}
 tbody tr:nth-child(even) {
     background-color: #e8e8e8;
 }
-tbody td {
-    height: 40px;
-}
-tbody { display:flex }
-th,td {
-    height: 40px;
-    display: flex; /* 행을 가운데 정렬하기 위해 flex 사용 */
-    justify-content: center; /* 수평 가운데 정렬 */
-    align-items: center; /* 수직 가운데 정렬 */
-}
+
