--- a/src/main/webapp/css/horizontal_table.css
+++ b/src/main/webapp/css/horizontal_table.css
@@ -4,7 +4,7 @@ table {
     table-layout: auto;
 }
 thead {
-    background-color: #00AB6F;
+    background-color: #4CAF50;
     color: white;
 }
 table, td {
