--- a/src/main/webapp/css/vertical_table.css
+++ b/src/main/webapp/css/vertical_table.css
@@ -7,7 +7,7 @@ tbody {
 }
 tbody th {
     width: 25%;
-    background-color: #00AB6F;
+    background-color: #4CAF50;
     color: white;
     border: 1px solid white;
 }
